Fixes some css issues around text inputs:
        * decreases the padding in each input, so that hopefully the
          experience is better for smaller screens
        * increases the size of the ssn inputs so they don't look cutoff

--- a/client/stylesheets/variables/_form_spacing.scss
+++ b/client/stylesheets/variables/_form_spacing.scss
@@ -1,4 +1,4 @@
-$input-top-padding: 1*$spacing;
-$input-side-padding: 1.2*$spacing;
+$input-top-padding: ceil(0.85*$spacing);
+$input-side-padding: ceil($spacing);
 $input-border-width: 1px;
 $input-border-width-special: 2px;
